# graph-attention-network

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  dataset.py  layer.py  train.py
models/: model_epoch_100.safetensors  model_epoch_1000.safetensors  model_epoch_200.safetensors  model_epoch_300.safetensors  model_epoch_400.safetensors  model_epoch_500.safetensors  model_epoch_600.safetensors  model_epoch_700.safetensors  model_epoch_800.safetensors  model_epoch_900.safetensors
