[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
app = "app:train_cora"


[tool.poetry.dependencies]
python = "^3.11"
tinygrad = "^0.9.0"
networkx = "^3.3"
pandas = "^2.2.2"
scipy = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
